wp-content/themes/sayenko-erickson/assets/scss/structure/_widgets.scss
// Widgets

.footer-widgets {
    
    background-color: #faf6f6;
    
    
    .wrap {
        padding: rem-calc(50 0);
        margin: 0 auto;
        max-width: $global-width;
        position: relative;   
        
        @include breakpoint(xxlarge) {
            //padding-right: rem-calc(50);
        }
    }
    
    
    .grid-x {
        @include breakpoint(medium-large) {
            .cell:not(:first-child) {
                margin-left: auto;
            }
        }
        
        @include breakpoint(xxlarge) {
            .cell:not(:first-child) .widget {
                padding-left: 80px; 
            }
        }
    }
    
    
    img {
        margin-bottom: rem-calc(10);
        max-width: rem-calc(220);   
    }
    
    h5 {
        font-weight: 600;  
        text-transform: none; 
    }
        
	.widget {
        
        margin-bottom: rem-calc(35);

		.widget-title {
			font-size: rem-calc(20);
		}
        
        p {
			font-size: rem-calc(15);
			line-height: 1.2; 
            margin-bottom: rem-calc(15);
        }        
	}
    
    .address-phone {
        li {
            margin-bottom: rem-calc(16);   
            
            a {
                min-height: 19px;
                display: inline-block;
                padding-left: 24px;
                position: relative;
                color: $orange;
                
                svg {
                    position: absolute;
                    top: 50%;
                    transform: translateY(-50%);  
                    left: 0; 
                }
            }
        }
    }
    
    .back-to-top {
        position: absolute;
        bottom: 20px;
        right: 20px;
        color: $dark-gray;   
        
        span {
            padding-left: 5px;   
        }
        
        &:hover {
            color: lighten($dark-gray, 20%);      
        }
    }

	.widget_nav_menu {

		.menu {
			margin: 0;
			padding: 0;
			display: block;
		}
        
        .sub-menu {
            padding: rem-calc(10 0);
        }

		.menu-item {
			display: block;
            margin-bottom: rem-calc(15);
            
            @include breakpoint(xxlarge) {
                margin-bottom: rem-calc(12);
            }
		}

		a {
			color: $dark-gray;
			font-size: rem-calc(15);
			line-height: 1.2;
			padding: 0;
            
            &:hover {
                color: lighten($dark-gray, 20%);   
            }
		}
	}
    
    
    .accordion-menu .is-accordion-submenu-parent:not(.has-submenu-toggle)>a {
        
        padding-left: 20px;
        
        &:after {
            display: block;
            width: auto;
            height: auto;
            content: '[\0002B]';
            border: none;
            position: absolute;
            top: 0;
            margin-top: 0;
            left: 0;
            right: auto;
        }
    }
    
    .accordion-menu .is-accordion-submenu-parent[aria-expanded='true']>a:after {
        content: '[\02212]';
        transform: none;
        transform-origin: none;
    }

}

